deployment-ocp/bluegreen/bg-deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: petclinic-green
  name: petclinic-green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: petclinic-green
  template:
    metadata:
      labels:
        app: petclinic-green
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/app-bg/petclinic:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: petclinic
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      restartPolicy: Always
