deployment-ocp/bluegreen/bg-service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: petclinic-blue
  name: petclinic-blue
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app: petclinic-blue
  sessionAffinity: None
  type: ClusterIP
