deployment-ocp/bluegreen/bg-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: petclinic
  name: petclinic
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: petclinic-blue
    weight: 100
  alternateBackends:
    - kind: Service
      name: petclinic-green
      weight: 0
